--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,17 +3,18 @@ spring:
     # 配置数据源类型
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/test_mybatisplus?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://127.0.0.1:3306/test_ssm?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: mysql368.cn
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    default-enum-type-handler: com.baomidou.mybatisplus.core.handlers.MybatisEnumTypeHandler
   global-config:
     banner: true
     enable-sql-runner: false
     db-config:
-      table-prefix: sys_
+      table-prefix: mp_
       id-type: auto
       logic-delete-value: 1       # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0   # 逻辑未删除值(默认为 0)
